Dark mode CSS fixes
Fix text display in mail list
Fix hover text colour in menu items

--- a/atkomail-client/src/Mailbox.css
+++ b/atkomail-client/src/Mailbox.css
@@ -1,6 +1,3 @@
-.ui.list .list > .item a.header, .ui.list > .item a.header {
-    color: #00297A !important;
-}
 .address:hover{
     cursor: pointer;
 }
